[gd_scene load_steps=7 format=3 uid="uid://dj802152gh2te"]

[ext_resource type="Script" path="res://GUI/GUI.gd" id="1_at6c2"]
[ext_resource type="PackedScene" uid="uid://csd1ai85csllh" path="res://Commons/FPS.tscn" id="1_yapxk"]
[ext_resource type="Script" path="res://Commons/TimerLabel.gd" id="2_s18oq"]
[ext_resource type="PackedScene" uid="uid://bqanpsoo6txmg" path="res://assets/backgrounds/World/parallax_background.tscn" id="4_6vian"]
[ext_resource type="PackedScene" uid="uid://eppss1w3jyq" path="res://GUI/gameover.tscn" id="5_1xda0"]
[ext_resource type="PackedScene" uid="uid://qtub2d5pmpto" path="res://GUI/settingmenu.tscn" id="6_3s7sr"]

[node name="Camera2D" type="Camera2D"]
zoom = Vector2(2.5, 2.5)
limit_bottom = 1000000000

[node name="GUI" type="Node2D" parent="."]
script = ExtResource("1_at6c2")

[node name="Button" type="Button" parent="GUI"]
offset_left = 268.0
offset_top = -160.0
offset_right = 526.0
offset_bottom = -83.0
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 50
text = "返回主菜单"

[node name="ParallaxBackground" parent="GUI" instance=ExtResource("4_6vian")]

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
offset_left = -320.0
offset_top = -159.0
offset_right = 103.0
offset_bottom = 259.0
scale = Vector2(0.3, 0.3)

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="GUI/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 0, 0.156863, 1)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "血量"

[node name="Player_Health" type="ProgressBar" parent="GUI/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 0.0823529, 0.258824, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GUI/VBoxContainer/HBoxContainer"]
modulate = Color(0, 0.290196, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "护盾"

[node name="Player_Shield" type="ProgressBar" parent="GUI/VBoxContainer/HBoxContainer"]
modulate = Color(0.176471, 0.278431, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30

[node name="Fps" parent="GUI/VBoxContainer" instance=ExtResource("1_yapxk")]
modulate = Color(1, 1, 0.45098, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 0

[node name="Enemy_Number" type="Label" parent="GUI/VBoxContainer"]
modulate = Color(1, 0.0823529, 0.258824, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "敌人数量:999"

[node name="Bullet_Number" type="Label" parent="GUI/VBoxContainer"]
modulate = Color(0.388235, 0.945098, 0.235294, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "剩余子弹:999"

[node name="Energy" type="Label" parent="GUI/VBoxContainer"]
modulate = Color(1, 0.603922, 0, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "饥饿值:100"

[node name="killed_Enemy_Number" type="Label" parent="GUI/VBoxContainer"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "杀死的敌人数量:999"

[node name="Time" type="Label" parent="GUI/VBoxContainer"]
modulate = Color(0.517311, 1, 0.861074, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "游玩时间"
script = ExtResource("2_s18oq")

[node name="Player_Pos" type="Label" parent="GUI/VBoxContainer"]
modulate = Color(1, 0.529412, 1, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "玩家位置:"
metadata/_edit_use_anchors_ = true

[node name="gameover" parent="GUI" instance=ExtResource("5_1xda0")]
visible = false
offset_left = -181.0
offset_top = -100.0
offset_right = 1591.0
offset_bottom = 876.0
scale = Vector2(0.2, 0.2)

[node name="setting" parent="GUI" instance=ExtResource("6_3s7sr")]
visible = false

[connection signal="pressed" from="GUI/Button" to="GUI" method="_on_button_pressed"]
